--- a/Tarea1/Tarea1_SAC/.project
+++ b/Tarea1/Tarea1_SAC/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Tarea1_SAC</name>
+	<name>Ejemplo_1_SAC</name>
 	<comment></comment>
 	<projects>
 	</projects>
